--- a/wiki/wretched.wikitext
+++ b/wiki/wretched.wikitext
@@ -1,5 +1,5 @@
 =={{En}}==
-===Adjective==
+===Adjective===
 # Very miserable; sunk in, or accompanied by, deep affliction or distress, as from want, anxiety, or grief; calamitous; woeful; very afflicting.
 # Worthless; paltry; very poor or mean; miserable; as, a ''wretched'' poem; a ''wretched'' cabin.
 # Hatefully contemptible; despicable; wicked (Obsolete).
