--- a/wiki/wretched.wikitext
+++ b/wiki/wretched.wikitext
@@ -4,6 +4,6 @@
 # Worthless; paltry; very poor or mean; miserable; as, a ''wretched'' poem; a ''wretched'' cabin.
 # Hatefully contemptible; despicable; wicked (Obsolete).
 
-==Quotes==
+===Quotes===
 * ''To what '''wretched''' state reserved!''  [[Milton]]
 * '''''Wretched''' ungratefulness''. Sir Philip Sidney
