--- a/wiki/ecocide.wikitext
+++ b/wiki/ecocide.wikitext
@@ -8,13 +8,13 @@ From a strictly human [[point of view]], the most reasonable way to assess the l
 
 From this point of view, there are many known cases of utter disabling of nature's services due to [[pollution]], [[erosion]], loss of [[topsoil]] due to [[strip mining]] or overintensive [[agriculture]] - perhaps leaving a minimal ecosystem such as a [[desert]] not capable of performing the same services or life forms as prior to the ecocide, [[flooding]], [[salt]] intrusion - such as due to [[shrimp farm]]ing, and (most commonly) [[deforestation]].
 
-Some well known examples are the drying up of the [[Aral Sea]], the advancing of the [[Sahara Desert]] into what were the [[grain]]-producing regions of the [[Roman Empire]], the erasure and poisoning of farm lands along the Western Front during [[World War I]] (see [[technological advancement during World War I]] for details re: mud) and the total loss of all trees from [[Easter Island]], which today is simply grassland, incapable of supporting a large population.  This last is a signal case often cited by [[ecologist]]s, who refer to [[Easter Island Syndrome]] as evidence that human beings may be naturally inclined to ecocide, and do indeed '''shit where they live''', as the popular expression (and the song ''[[Humans Are Stupid]]'', by [[Mendelsohn Joe]]) suggests.  ''See also [[misanthropology]].''
+Some well known examples are the drying up of the [[Aral Sea]], the advancing of the [[Sahara Desert]] into what were the [[grain]]-producing regions of the [[Roman Empire]], the erasure and poisoning of farm lands along the Western Front during [[World War I]] (see [[technological advancement during World War I]] for details re: mud) and the total loss of all trees from [[Easter Island]], which today is simply grassland, incapable of supporting a large population.  This last is a signal case often cited by [[ecologist]]s, who refer to ''Easter Island Syndrome'' as evidence that human beings may be naturally inclined to ecocide, and do indeed '''shit where they live''', as the popular expression (and the song ''[[Humans Are Stupid]]'', by [[Mendelsohn Joe]]) suggests.  ''See also [[misanthropology]].''
 
 The related concept of [[dieoff]] in [[population biology]] refers to the precipitous drop in any population once it has [[overgrazing|overgrazed]] its environment to the point where it is simply no longer viable as a population.  This usually occurs far before a full-spectrum ecocide, however, as few organisms consume a wide range of foods, nor directly transform (or "[[terraform]]") [[ecoregion]]s simply to serve their own purposes.  Thus total [[extinction]] of all life seems unlikely.
 
-Except, of course, where humans are involved.  In that case, anything would seem possible.
-
-See also:  [[list of ecology topics]]
-[[Category:Ecology]]
-
 Of course the use of radioactive munitiions, as the United States has done since 1991, constitutes ecocide wherever such weapons are used.  In Iraq, [[Gulf War Syndrome]] is a symptom of the ecocide that has occurred in that region.
+
+== See also ==
+*[[list of ecology topics]]
+
+[[Category:Ecology]]
