--- a/wiki/jail.wikitext
+++ b/wiki/jail.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Noun===
 '''jail''' (''[[countable]] and [[uncountable]]''; ''plural'' '''jails''')
 
@@ -30,3 +31,6 @@
 *[[jailbird]]
 *[[jailer]]
 *[[jail sentence]]
+
+==[[multilingual associations]]==
+*[[Russian]]: [[:ru:в|в]] жёлтой /v joltoy/ (in [[yellow]]) '''jail'''  [[:ru:белый|белый]] ([[white]]) [[bell]]
