--- a/wiki/putter.wikitext
+++ b/wiki/putter.wikitext
@@ -1,2 +1,19 @@
-===verb===
-To be active, but not excessively busy, at a task or a series of tasks. Also puttered, puttering.
+==English==
+===Pronunciation===
+*pŭt'ə(r), /ˈpʌtə(r)/, /"pVt@(r)/
+
+===Intransitive verb===
+'''to putter''' ('''puttering''', '''puttered''', '''puttered''')
+
+#To be active, but not excessively busy, at a task or a series of tasks.
+
+===Pronunciation===
+*po͝ot'ə(r), /ˈpʊtə(r)/, /"pUt@(r)/
+
+===Noun===
+'''putter''' (''plural'' '''putters''')
+
+#One who puts.
+
+===See also===
+*[[shot-putter]]
