/* Resource */ ce <ecocide#684589>

--- a/wiki/ecocide.wikitext
+++ b/wiki/ecocide.wikitext
@@ -8,7 +8,7 @@ A difficult question is whether an ecosystem is alive in the sense of a single l
 
 An ecosystem typically does not reproduce, and it typically has a [[homeorhetic]] equilibrium and not a full homeostasis.  However, a [[virus]] or [[prion]] or [[molecular assembler]] or perhaps a [[clanking replicator]] also lacks their own reproduction, homeostasis, and thus full status as a life form, but it would not be difficult to identify when they had been "killed", i.e. lost their integrity or "died", unable to perform their normal functions any more.
 
-=== Resource ==
+=== Resource ===
 
 From a strictly human [[point of view]], the most reasonable way to assess the life or lack of life of any ecosystem is whether it is capable of an [[ecological yield]] of fresh air, clean water, etc. - providing [[nature's services]], on which our own lives depend.  This is the reason why we might care about ecocide, of course, which aside from being an [[aesthetic]] or [[ethics|ethical]] issue, is of course a matter of sheer survival for those who depend on the endangered ecosystem in any way.
 
