<こんにちは#48826>

--- a/wiki/%E3%81%93%E3%82%93%E3%81%AB%E3%81%A1%E3%81%AF.wikitext
+++ b/wiki/%E3%81%93%E3%82%93%E3%81%AB%E3%81%A1%E3%81%AF.wikitext
@@ -1,6 +1,6 @@
 ==Japanese==
 ===Interjection===
-'''こんにちは''' ([[今日は]], konnichiwa)
+'''こんにちは''' ([[今日は]], konnichiha)
 
 # A formal japanese greeting used in the daytime: [[hello]], [[good afternoon]]
 #:Literally: "this day".
