/* Aternative spellings */ fix typo <kludge#63339>

--- a/wiki/kludge.wikitext
+++ b/wiki/kludge.wikitext
@@ -4,5 +4,5 @@
 
 # (''electronics engineering'') an improvised [[device]], usually [[crude]]ly constructed.  Typically used to test the validity of a principle before doing a finished design.
 
-====Aternative spellings====
+====Alternative spellings====
 *[[kluge]]
