Couldn't stop myself from having a go . . . <conservative#50663>

--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -4,17 +4,20 @@
 '''conservative (conservatives)'''
 
 #A person who [[favor]]s [[maintenance]] of the [[status quo]], [[frequent]]ly of his own [[childhood]].
-
-# A [[political]] [[organization]] in the [[UK]], Closely [[connected]] with 
-[[Liberalism]]
+# A [[political]] [[organization]] in the [[UK]], Closely [[connected]] with [[Liberalism]]
+# (''US'') A [[political conservative]]
+# (''US'') A [[social conservative]].
+# (''US'') One who favors the [[Republican]] party, regardless of its conservatism in other senses.
 
 ===Translations===
 *Finnish: [[konservatiivi]]
-
-===Antonym===
-*[[liberal]]
 
 ===Related Words===
 *[[conserve]]
 *[[conservationist]]
 *[[conservator]]
+*[[political conservative]]
+*[[social conservative]]
+
+===See Also===
+*[[liberal]]
