--- a/wiki/quine.wikitext
+++ b/wiki/quine.wikitext
@@ -8,5 +8,6 @@ from the name of the logician Willard van Orman Quine, via Douglas Hofstadter
 
 <b>quine</b> (<i>noun</i>)
 # (<i>computer science</i>) A program that prints out its own [[source_code]].
+# (<i>doric</i>) A young woman or daughter.
 
 See also [http://catb.org/~esr/jargon/html/Q/quine.html Quine in the Jargon File], [[w:Quine|Wikipedia on Quine]].
