+fiscal conservative, moved Conservative party, +see, +adjective <conservative#50663>

--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -4,10 +4,18 @@
 '''conservative (conservatives)'''
 
 #A person who [[favor]]s [[maintenance]] of the [[status quo]], [[frequent]]ly of his own [[childhood]].
-# A [[political]] [[organization]] in the [[UK]], Closely [[connected]] with [[Liberalism]]
+# (''UK'') A member of the [[Conservative party]].
+# (''US'') A [[fiscal conservative]]
 # (''US'') A [[political conservative]]
 # (''US'') A [[social conservative]].
 # (''US'') One who favors the [[Republican]] party, regardless of its conservatism in other senses.
+
+===Adjective===
+'''conservative''', '''more conservative''', '''most conservative'''
+
+# (''US'') Supporting some combination of the va
+# (''UK'') Relating to the [[Conservative party]].
+# (''physics'', ''not comparable'') Neither creating nor destroying a given quantity.
 
 ===Translations===
 *Finnish: [[konservatiivi]]
@@ -16,8 +24,11 @@
 *[[conserve]]
 *[[conservationist]]
 *[[conservator]]
+*[[fiscal conservative]]
 *[[political conservative]]
 *[[social conservative]]
 
 ===See Also===
+*[[Labour]]
 *[[liberal]]
+*[[Tory]]
