/* Adjective */ oops <conservative#50663>

--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -13,7 +13,8 @@
 ===Adjective===
 '''conservative''', '''more conservative''', '''most conservative'''
 
-# (''US'') Supporting some combination of the va
+# (''US'') Supporting some combination of fiscal, political or social conservatism.
+# (''US'') Relating to the [[Replublican party]], regardless of its conservatism.
 # (''UK'') Relating to the [[Conservative party]].
 # (''physics'', ''not comparable'') Neither creating nor destroying a given quantity.
 
