party party party <conservative#50663>

--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -8,13 +8,13 @@
 # (''US'') A [[fiscal conservative]]
 # (''US'') A [[political conservative]]
 # (''US'') A [[social conservative]].
-# (''US'') One who favors the [[Republican]] party, regardless of its conservatism in other senses.
+# (''US'') One who favors the [[Republican party]], regardless of its conservatism in other senses.
 
 ===Adjective===
 '''conservative''', '''more conservative''', '''most conservative'''
 
 # (''US'') Supporting some combination of fiscal, political or social conservatism.
-# (''US'') Relating to the [[Replublican party]], regardless of its conservatism.
+# (''US'') Relating to the [[Republican party]], regardless of its conservatism.
 # (''UK'') Relating to the [[Conservative party]].
 # (''physics'', ''not comparable'') Neither creating nor destroying a given quantity.
 
@@ -24,12 +24,14 @@
 ===Related Words===
 *[[conserve]]
 *[[conservationist]]
+*[[conservatism]]
 *[[conservator]]
 *[[fiscal conservative]]
 *[[political conservative]]
 *[[social conservative]]
 
 ===See Also===
-*[[Labour]]
+*[[Labour party]]
 *[[liberal]]
+*[[Republican party]]
 *[[Tory]]
