/* Noun */ [[remove]]d [[gratuitous]] [[wikification]], tweaked defn <conservative#50663>

--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -3,7 +3,7 @@
 ==Noun==
 '''conservative (conservatives)'''
 
-#A person who [[favor]]s [[maintenance]] of the [[status quo]], [[frequent]]ly of his own [[childhood]].
+#A person who favors maintenance of the [[status quo]] or reversion to some earlier status.
 # (''UK'') A member of the [[Conservative party]].
 # (''US'') A [[fiscal conservative]]
 # (''US'') A [[political conservative]]
