--- a/wiki/conservative.wikitext
+++ b/wiki/conservative.wikitext
@@ -13,6 +13,10 @@
 ===Adjective===
 '''conservative''', '''more conservative''', '''most conservative'''
 
+# Tending to resist change.
+#: ''The curriculum committee at this university is extremely conservative.''
+# Based on pessimistic assumptions.
+#: ''At a conservative estimate, growth may even be negative next year.''
 # (''US'') Supporting some combination of fiscal, political or social conservatism.
 # (''US'') Relating to the [[Republican party]], regardless of its conservatism.
 # (''UK'') Relating to the [[Conservative party]].
