/* Examples */ +have/habere <false cognate#46243>

--- a/wiki/false_cognate.wikitext
+++ b/wiki/false_cognate.wikitext
@@ -8,6 +8,7 @@
 # The word for "dog" in the Australian Aboriginal language Mbabaram happens to be ''dog''.
 # The Korean word for "two" happens to be ''tu''.
 # Many completely unrelated languages use some variant of ''ma'' for "mother".
+# English ''have'' and Latin ''habere'' are thought to be false cognates (''have'' is more likely cognate to ''capere'').
 
 ===Usage Note===
 
