fmt (shall we admit "Misspelling" as a heading?) <superceed#64876>

--- a/wiki/superceed.wikitext
+++ b/wiki/superceed.wikitext
@@ -1,1 +1,5 @@
-'''Superceed''' is a common incorrect spelling of [[supersede]].
+==English==
+
+===Misspelling===
+
+# A common misspelling of [[supersede]].
