--- a/wiki/mammoth.wikitext
+++ b/wiki/mammoth.wikitext
@@ -7,6 +7,7 @@
 ====Translations====
 
 *Chinese: [[猛犸]]
+*Finnish: [[mammutti]]
 *French: [[mammouth]] ''m''
 *Italian: [[mammut]] ''m''
 *Japanese: [[マンモス]]
@@ -18,6 +19,9 @@
 
 ====Synonyms====
 *[[colossal]], [[enormous]], [[gigantic]], [[huge]], [[titanic]]
+
+====Translations====
+*Finnish: [[mammutti]]- (''in compounds''), [[mammuttimainen]], [[jättiläismäinen]]
 
 ===See also===
 *[[w:mammoth|Wikipedia article on the mammoth]]
