--- a/wiki/prison.wikitext
+++ b/wiki/prison.wikitext
@@ -19,6 +19,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vankila]]
 *French: prison ''f''
 *German: [[Gefängnis]] ''n''
 *Italian: [[prigione]] ''f'', [[carcere]] ''m''
@@ -36,6 +37,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Finnish: [[vankeus]], [[vankeusrangaistus]]
 *French: prison ''f''
 *Italian: [[prigione]] ''f'', [[carcere]] ''m''
 |}
