--- a/wiki/%D7%9E%D7%99%D7%9C%D7%95%D7%9F.wikitext
+++ b/wiki/%D7%9E%D7%99%D7%9C%D7%95%D7%9F.wikitext
@@ -1,4 +1,4 @@
-[[Link title]]== Hebrew ==
+== Hebrew ==
 === Etymology ===
 From ancient milla ([[מילה]], word) with the modern suffix -on ([[-ון]])
 
