right-to-left mark so hyphen appears in the proper suffix position. <מילון#24878>

--- a/wiki/%D7%9E%D7%99%D7%9C%D7%95%D7%9F.wikitext
+++ b/wiki/%D7%9E%D7%99%D7%9C%D7%95%D7%9F.wikitext
@@ -1,6 +1,6 @@
 == Hebrew ==
 === Etymology ===
-From ancient milla ([[מילה]], word) with the modern suffix -on ([[-ון]])
+From ancient milla ([[מילה]], word) with the modern suffix -on ([[-ון|‏-ון]])
 
 === Pronunciation ===
 (IL) /mi'lon/.היוון
