--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -41,6 +41,7 @@
 *{{sk}}: [[milovať]], [[ľúbiť]]
 *Swedish: [[älska]], [[vara kär i]]
 *Tamil: [[காதலி]] (between man and woman-sexual love)
+*Hindi: PREM
 |}
 |}
 
