small content changes <racism#43933>

--- a/wiki/racism.wikitext
+++ b/wiki/racism.wikitext
@@ -1,7 +1,7 @@
 ===Noun===
 '''racism'''
-#Thinking that members of one [[race]] superior compared to members of other races 
-#Discriminatory behavior towards members of races
+#The belief that members of one [[race]] are superior to members of other races
+#Discriminatory behavior towards members of a certain race or races
 
 ====Related terms====
 *[[racist]]
