--- a/wiki/fetal.wikitext
+++ b/wiki/fetal.wikitext
@@ -4,4 +4,4 @@
 
 '''fetal'''
 
-#Pertaining to, or connected with, a fetus; as, fetal circulation; fetal membranes.
+#Pertaining to, or connected with, a [[fetus]]; as, fetal circulation; fetal membranes.
