minor grammatical change <fetus#49872>

--- a/wiki/fetus.wikitext
+++ b/wiki/fetus.wikitext
@@ -5,7 +5,7 @@
 ===Noun===
 '''fetus''' (''plural'' '''fetuses''')
 
-#(''US'') A [[unborn]] [[baby]] that is more developed than an [[embryo]].
+#(''US'') An [[unborn]] [[baby]] that is more developed than an [[embryo]].
 
 ====Variant spelling====
 *(''British'') [[foetus]]
