--- a/wiki/racism.wikitext
+++ b/wiki/racism.wikitext
@@ -8,6 +8,8 @@
 
 ====Translations====
 *Finnish: [[rasismi]]
+*French: [[racisme]] ''m''
+*Italian: [[razzismo]] ''m''
 *Slovak: [[rasizmus]] ''m''
 *Slovene: [[rasizem]] ''m''
 *Spanish: [[racismo]] ''m''
