--- a/wiki/HTTP_cookie.wikitext
+++ b/wiki/HTTP_cookie.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''HTTP cookie''' (''plural'' '''HTTP cookie''')
+'''HTTP cookie''' (''plural'' '''HTTP cookies''')
 
 #A packet of [[information]] sent by a [[server]] to a [[World Wide Web]] [[browser]] and then returned by the browser each time it accesses that server, used to maintain state between otherwise [[stateless]] HTTP [[transaction]]s, for example, to identify the user.
 
