--- a/wiki/racist.wikitext
+++ b/wiki/racist.wikitext
@@ -3,6 +3,8 @@
 
 ====Translations====
 *Finnish: [[rasisti]]
+*French: [[rasiste]] ''m'', ''f''
+*Italian: [[razzista]] ''m'', ''f''
 *Spanish: [[racista]] ''f''
 
 ===Adjective===
