interwiki +pl <UT#5598>

--- a/wiki/UT.wikitext
+++ b/wiki/UT.wikitext
@@ -1,29 +1,4 @@
-==English==
-===Etymology===
-The first word (the Latin '''ut''': see below) of the first line of a section of [[Scripture]], where the first word in each line was taken to use for the names of the syllables of [[sol-fa]]
+===Abbreviation===
+#[[Utah]] (US state)
 
-===Noun===
-'''ut'''
-
-# syllable formerly used in [[sol-fa]] to represent the first note of a [[major scale]].  '''Ut''' has been replaced by ''[[do]]''.
-----
-
-==French==
-===Noun===
-'''ut''' ''m''
-
-#(''musical note'') ut, [[do]]
-
-----
-==Latin==
-===Conjunction===
-'''ut'''
-
-# [[that]], [[so that]], in order to, in order that
-#: "Spero ut pacem habeant semper." - ''"I hope that they may always have peace."''
-
-===Related terms===
-*[[ne]]
-*[[sicut]]
-
-[[pl:ut]]
+[[pl:UT]]
