--- a/wiki/parakeratosis.wikitext
+++ b/wiki/parakeratosis.wikitext
@@ -1,1 +1,4 @@
-#REDIRECT [[Hyperkeratosis]]
+==English==
+===Noun===
+'''parakeratosis'''
+#In pathology, retention of nuclei in the [[stratum corneum]] layer of skin.
