--- a/wiki/hyperkeratosis.wikitext
+++ b/wiki/hyperkeratosis.wikitext
@@ -1,4 +1,4 @@
 ==English==
 ===Noun===
-'''parakeratosis'''
+'''hyperkeratosis'''
 #In pathology, excess [[keratin]] formation on the skin surface, as can be seen in a number of dermatologic conditions.
