--- a/wiki/ridden.wikitext
+++ b/wiki/ridden.wikitext
@@ -6,7 +6,7 @@
 
 '''ridden'''
 
-# past participle of to [[ride]]
+# past participle of to [[ride]]. I.e. [[bed ridden]].
 
 === Translations ===
 *[[Dutch]]: [[gereden]]
