--- a/wiki/flirt.wikitext
+++ b/wiki/flirt.wikitext
@@ -10,15 +10,15 @@
 
 '''to flirt'''
 
-#To throw with a jerk or quick effort; to fling suddenly; as, they flirt water in each other's faces; he flirted a glove, or a handkerchief.
-#To toss or throw about; to move playfully to and fro; as, to flirt a fan.
-#To jeer at; to treat with contempt; to mock.
-#To run and dart about; to act with giddiness, or from a desire to attract notice; especially, to play the coquette; to play at courtship; to coquet; as, they flirt with the young men.
-#To utter contemptuous language, with an air of disdain; to jeer or gibe.
-#One who flirts; esp., a woman who acts with giddiness, or plays at courtship; a coquette; a pert girl.
+#To throw with a jerk or quick effort; to [[fling]] suddenly; as, they flirt water in each other's faces; he flirted a glove, or a handkerchief.
+#To [[toss]] or [[throw]] [[about]]; to move [[playful]]ly to and fro; as, to flirt a fan.
+#To [[jeer]] at; to treat with [[contempt]]; to [[mock]].
+#To run and [[dart]] about; to act with [[giddiness]], or from a [[desire]] to [[attract]] [[notice]]; especially, to play the [[coquette]]; to play at [[courtship]]; to [[coquet]]; as, they flirt with the young men.
+#To utter [[contempt]]uous language, with an [[air]] of [[disdain]]; to [[jeer]] or [[gibe]].
+#One who flirts; esp., a woman who acts with [[giddiness]], or plays at [[courtship]]; a [[coquette]]; a [[pert]] girl.
 
 ===Adjective===
 
 '''flirt'''
 
-#Pert; wanton.
+#[[Pert]]; [[wanton]].
