--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -83,6 +83,7 @@ Many modern students have made the mistake of thinking that since much of Zen so
 *[http://www.dailyzen.com/ Daily Zen]
 *[http://www.e-sangha.com/ E-Sangha Buddhism Portal]
 *[http://www.do-not-zzz.com/ KODAIJI-TEMPLE with a good flash animation as an introduction to Zen Buddhism]
+*[http://www.ciolek.com/WWWVLPages/ZenPages/ZenSchools.html/ Schools of Zen Buddhism]
 
 ==Further reading ==
 *''The Compass of Zen'' (ISBN 1570623295), [[Zen Master Seung Sahn]]
