/* Etymology */ <pop music#45839>

--- a/wiki/pop_music.wikitext
+++ b/wiki/pop_music.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Shortened form of ''popular music''.
+Shortened form of ''[[popular music]]''.
 
 ===Noun phrase===
 
