/* Noun */ (also மதிராஸ், மதறாஸ்) <மெட்ராஸ்#50572>

--- a/wiki/%E0%AE%AE%E0%AF%86%E0%AE%9F%E0%AF%8D%E0%AE%B0%E0%AE%BE%E0%AE%B8%E0%AF%8D.wikitext
+++ b/wiki/%E0%AE%AE%E0%AF%86%E0%AE%9F%E0%AF%8D%E0%AE%B0%E0%AE%BE%E0%AE%B8%E0%AF%8D.wikitext
@@ -1,6 +1,6 @@
 ==Tamil==
 ===Noun===
-'''மெட்ராஸ்'''
+'''மெட்ராஸ்''' (also மதிராஸ், மதறாஸ்)
 
 #[[Madras]]: Former name of the State capital of [[Tamil Nadu]] ([[India]]), now known as [[Chennai]].
 
