--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -54,7 +54,9 @@ The following Zen traditions still exist in Japan: [[Rinzai]], [[Soto]], and [[O
 
 ==Zen teachings and practices==
 
-Zen teachings often criticize [[text]]ual [[Hermeneutics|study]] and [[praxeology|worldly]] [[action (philosophy)|action]], concentrating primarily on meditation in pursuit of an unmediated awareness of the processes of the world and the mind. However, these teachings are themselves also deeply rooted in the Buddhist textual tradition, drawing primarily on [[Mahayana|Mah&#257;y&#257;na]] sutras composed in India and China, and on the recorded teachings of masters in the various Zen traditions themselves.
+Zen teachings often criticize [[text]]ual [[Hermeneutics|study]] and the pursuit of wordly accomplishments, concentrating primarily on meditation in pursuit of an unmediated awareness of the processes of the world and the mind. Zen, however, is no mere quietistic doctrine: the Chinese Zen master Pai-chang (720-814 AD), commonly known by the Japanese name ''Hyakujo'', left behind a famous saying which had been the guiding principal of his life, "A day without work is a day of no eating." When Hyakujo was thought to be too old to work in the garden, his devotees hid his gardening tools. In response to this, the master then refused to eat, saying "No working, no living." 
+
+These teachings are in turn deeply rooted in the Buddhist textual tradition, drawing primarily on [[Mahayana|Mah&#257;y&#257;na]] sutras composed in India and China, particularly the ''Pranaparmitahridaya'' (Japanese: ''Shingyo'') , the ''Samantamukha-paravarta'' (Japanese: ''Kwannongyo''), and the ''Vajracchedika'' (Japanese: ''Kongyo'') sutras. The body of Zen doctrine also includes the recorded teachings of masters in the various Zen traditions.
 
 ===Zazen===
 
