--- a/wiki/science.wikitext
+++ b/wiki/science.wikitext
@@ -37,6 +37,7 @@ Sometimes uncountable
 *Korean: [[Hanja]]: [[학]] (hag), [[학문]] (hag-mun), [[과학]] (gwa-hag)
 *Latin: [[scientia]] ''f''
 *Lithuanian: [[mokslas]] ''m'' (2)
+*Norwegian: [[vitenskap]] ''m''
 *[[Persian]]: [[دانش]] (danesh)
 *{{pl}}: [[nauka]] ''f''
 *Romanian: [[ştiinţă]] ''f''
