--- a/wiki/seducer.wikitext
+++ b/wiki/seducer.wikitext
@@ -1,1 +1,1 @@
-'''Bold text'''One who seduces or successfully tempts another into sin especially ''fornication.''
+One who seduces or successfully tempts another into sin especially ''fornication.''
