/* Intransitive verb */ <spam#36507>

--- a/wiki/spam.wikitext
+++ b/wiki/spam.wikitext
@@ -37,7 +37,7 @@ From a [[w:Monty Python|Monty Python]] sketch about the proper noun which featur
 ===Intransitive verb===
 '''to spam''' ([[spammed]], spammed)
 
-# To send spam.
+# To send spam,i.e.unsolicited electronic messages.
 
 ==== Translations ====
 *German: [[spammen]]
