--- a/wiki/killer.wikitext
+++ b/wiki/killer.wikitext
@@ -9,6 +9,7 @@
 #:''Driving while tired can be a killer.''
 
 ====Translations====
+*Arabic: [[قاتل]]
 *Chinese: [[杀手]]
 *Finnish: [[tappaja]]
 *French: [[tueur]] ''m'' (1), [[meurtrier]] ''m'' (2)
