--- a/wiki/legion.wikitext
+++ b/wiki/legion.wikitext
@@ -1,6 +1,6 @@
 == English ==
 
-=== Adjectivw ===
+=== Adjective ===
 
 # [[numerous]], [[vast]] [[multitude]] (as in 'his attributes are legion').
 
