--- a/wiki/accosting.wikitext
+++ b/wiki/accosting.wikitext
@@ -8,4 +8,4 @@ American ([[SAMPA]]):\@kA"stIN\
 
 '''Definition''':
 
-{{stub}}
+The act of physically attacking a person as in the bloke was''Italic text''accosting''Italic text'' the young woman.
