--- a/wiki/accosting.wikitext
+++ b/wiki/accosting.wikitext
@@ -8,4 +8,5 @@ American ([[SAMPA]]):\@kA"stIN\
 
 '''Definition''':
 
-The act of physically attacking a person as in the bloke was''Italic text''accosting''Italic text'' the young woman.
+The act of physically attacking a person as in 
+the bloke was accosting the young woman.
