--- a/wiki/legion.wikitext
+++ b/wiki/legion.wikitext
@@ -13,6 +13,10 @@
 
 [[horde]]
 
+=== Derived words ===
+
+[[legionary]]
+
 == See also ==
 
 [[w:legion]] - several encyclopedic definitions on our sister project, [[Wikipedia]]
