/* Translations */ +he <mars#2663>

--- a/wiki/mars.wikitext
+++ b/wiki/mars.wikitext
@@ -29,6 +29,7 @@ Latin ''[[Mars]]'', from older Latin '''[[Mavors]]'''.  The candy bar is named a
 *French: Mars ''m'' (1, 2, 3)
 *German: Mars ''m'' (1, 2, 3)
 *Greek, Modern: [[Άρης]] ([[Ares]]), [[Aris]] (1, 2)
+*Hebrew: [[מאדים|מַאַדִים]] (ma’adim, 2)
 *Italian: [[Marte]] ''m'' (1, 2)
 *Japanese: [[火星]] ([[かせい]], kasei)
 *Latin: Mars ''m'' (1, 2, 3)
