--- a/wiki/chav.wikitext
+++ b/wiki/chav.wikitext
@@ -1,1 +1,1 @@
-Chav is a perjorative term for a rapidly growing group of under-educated, over-sexed young Britainites.
+Chav is a perjorative term for a rapidly growing group of under educated, over-sexed young Britainites.
