/* Translations */ +lao <duck#4605>

--- a/wiki/duck.wikitext
+++ b/wiki/duck.wikitext
@@ -60,6 +60,7 @@
 *Japanese: [[アヒル]] (ahiru), [[鴨]] ([[カモ]]/[[かも]], kamo), [[オシドリ]] ([[おしどり]], oshidori) (1)
 *Korean: [[오리]] (ori) (1)
 *[[Ladin]]: [[anera]] (1)
+*[[Lao]]: [[ເປັດ]] (pe:t)
 *Latin: [[Anas platyrhynchos (domesticus)]] (1)
 *Latvian: [[pīle]] (1)
 *Lithuanian: [[antis]] (1)
