--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -104,6 +104,7 @@ Many modern students have made the mistake of thinking that since much of Zen so
 [[fr:Zen]]
 [[it:Buddhismo Zen]]
 [[ja:&#31109;]]
+[[nl:Zen]]
 [[pl:Zen]]
 [[pt:Zen]]
 [[zh:&#31109;&#23447;]]
