+extra senses; +syns; +etym; +see also <killer#38395>

--- a/wiki/killer.wikitext
+++ b/wiki/killer.wikitext
@@ -1,12 +1,21 @@
 ==English==
+===Etymology===
+[[kill]] + [[-er]]
+
 ===Noun===
-'''killer'''
+'''killer''' ([[killers]])
 
 #A person who [[kill]]s.
 #A murderer.
 #An animal that kills.
 #Something that causes death.
-#:''Driving while tired can be a killer.''
+#:''Driving while tired can be a '''killer'''.''
+#A [[diacritic]] mark used in [[Indic]] scripts to suppress an inherent vowel.
+#''Also used attributively''.
+
+====Synonyms====
+*1, 2: [[assassin]], [[murderer]]
+*5: [[virama]], [[halant]]
 
 ====Translations====
 *Arabic: [[قاتل]]
@@ -14,3 +23,9 @@
 *Finnish: [[tappaja]]
 *French: [[tueur]] ''m'' (1), [[meurtrier]] ''m'' (2)
 *Italian: [[assassino]] ''m'' (2)
+
+===See also===
+*[[anusvara]]
+*[[candrabindu]]
+*[[sukun]]
+*[[visarga]]
