fmt; sep rel & see also; merged the two translation sections <fiscal#2151>

--- a/wiki/fiscal.wikitext
+++ b/wiki/fiscal.wikitext
@@ -1,16 +1,20 @@
-derived from the [[Latin]] ''[[fiscus]]'' [[treasury]]
+==English==
+===Etymology===
+Derived from the [[Latin]] ''[[fiscus]]'' [[treasury]]
 
-==[[Adjective]]==
+===Adjective===
+'''fiscal'''
+
 #Related to the [[budget]] of a [[country]], [[region]] or [[city]].
 #[[financial]]
 
-===Translations===
+====Related words====
+*[[fiscal policy]]
+
+====Translations====
+*Danish: [[skattemæssig]] (1); [[financiel]] (2)
 *Dutch: [[fiscaal]]
 *French: [[budgétaire]] (''note'': fiscal is a [[false friend]], since it means ''related to taxes'')
 
-===Related words===
-*[[fiscal policy]]
+===See also===
 *[[finance]]
-
-===Translations===
-*Danish: [[skattemæssig]] (1); [[financiel]] (2)
