--- a/wiki/World_Exposition.wikitext
+++ b/wiki/World_Exposition.wikitext
@@ -1,11 +1,14 @@
+==English==
+===Noun===<!-- proper noun?? -->
+
 #Generic name for various large expositions? held since the mid 19th century.
-==Translation==
-*[[Dutch]]: [[wereldtentoonstelling]]
-*[[Finnish]]: [[maailmannäyttely]]
-*[[French]]: [[Exposition universelle]] (''note: capital letter to the first word but not the second)
-*[[Russian]]: [[всемирный|всемирная]] [[выставка]]
-*[[Swedish]]: [[världsutställning]]
 
-==See also==
+====Translations====
+*Dutch: [[wereldtentoonstelling]]
+*Finnish: [[maailmannäyttely]]
+*French: [[Exposition universelle]] (''note: capital letter to the first word but not the second)
+*Russian: [[всемирный|всемирная]] [[выставка]]
+*Swedish: [[världsutställning]]
 
-*[[w:World's fair]]
+===See also===
+*[[w:World's fair|Wikipedia article on the World's fair]]<!-- not sure what term/capitalization is better here -->
