fmt; dewikify non-native script xlations; move see also; pipelink non-consonant marks in arabic script entries; sep filipino & taglog entries <beer#1750>

--- a/wiki/beer.wikitext
+++ b/wiki/beer.wikitext
@@ -1,109 +1,107 @@
+==English==
+===Pronunciation===
+*[[w:IPA|IPA]]: /biɜr/
+
+=== Noun ===
 '''beer'''
 
-===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'biɜr/
-
-== Noun ==
 # A [[ferment]]ed [[beverage]] made commonly from [[barley]] [[malt]], with [[hop]]s or some other [[substance]] to impart a [[bitter]] flavor.
 # A fermented extract of the roots and other parts of various plants, as [[spruce]], [[ginger]], [[sassafras]], etc.
 # A solution produced by seeping plant materials in water or another [[fluid]].
 
-=== See Also ===
-:[[http://www.wikipedia.org/wiki/Beer Wikipedia:Beer]]
-:(adapted from Webster's 1913)
-
-=== Translations ===
+==== Translations ====
 *[[Afrikaans]]: [[bier]]
-*[[Albanian]]: [[birrë]]
-*[[Amharic]]: [[bira]]
-*[[Arabic]]: [[بِيرَة]] , [[جِعَة]] , [[ضَرْبٌ منَ الجِعَة]] ,[[مِزْر]] 
-*[[Armenian]]: [[Kareh Tchour]]
+*Albanian: [[birrë]]
+*[[Amharic]]: (bira)
+*Arabic: [[بيرة|بِيرَة]] , [[جعة|جِعَة]] , [[ضرب من الجعة|ضَرْبٌ منَ الجِعَة]] ,[[مزر|مِزْر]] 
+*Armenian: (Kareh Tchour)
 *[[Asturian]]: [[cerveza]]
 *[[Azerbaijani]]: [[пиво]], [[pivo]] 
 *[[Basque]]: [[garagardo]]
 *[[Belarusan]]: [[piva]]
-*[[Bengali]]: [[biAr]]
+*[[Bengali]]: (biAr)
 *[[Bitruscan]]: [[bira]]
-*[[Bosnian]]: [[pivo]]
+*Bosnian: [[pivo]]
 *[[Breton]]: [[bier]] ''m''
-*[[Bulgarian]]: [[бира]] ''f'' (1, 2, 3)
+*Bulgarian: [[бира]] ''f'' (1, 2, 3)
 *[[Catalan]]: [[cervesa]] ''f''
 *[[Cebuano]]: [[bir]], [[sirbesa]]
-*[[Chinese]]: [[啤酒]]
-*[[Croatian]]: [[pivo]], [[okrajak osnove]]
-*[[Czech]]: [[pivo]]
-*[[Danish]]: [[bajer]], [[øl]], [[øllen]]
-*[[Dutch]]: [[bier]] ''n''
+*Chinese: [[啤酒]]
+*Croatian: [[pivo]], [[okrajak osnove]]
+*Czech: [[pivo]]
+*Danish: [[bajer]], [[øl]], [[øllen]]
+*Dutch: [[bier]] ''n''
 *[[Ekspreso]]: [[bira]], [[servesa]]
 *[[Esperanto]]: [[biero]]
-*[[Estonian]]: [[õlu]]
-*[[Filipino]], Tagalog: [[serbesa]]
-*[[Finnish]]: [[olut]], [[kalja]], [[kotikalja]], [[mallasjuoma]]
-*[[French]]: [[bière]] ''f''
+*Estonian: [[õlu]]
+*[[Filipino]]: [[serbesa]]
+*Finnish: [[olut]], [[kalja]], [[kotikalja]], [[mallasjuoma]]
+*French: [[bière]] ''f''
 *[[Frisian]]: [[bier]]
 *[[Galician]]: [[cervexa]]
-*[[German]]: [[Bier]] ''n''
-*[[Greek]]: [[μπύρα]]
+*German: [[Bier]] ''n''
+*Greek: [[μπύρα]]
 *[[Gujarati]]: beer
 *[[Hawaiian]]: [[pia]], [[bia]], [[bud]] 
-*[[Hebrew]]: [[בירה]] ''f''
-*[[Hungarian]]: [[sör]]
-*[[Icelandic]]: [[bjór]], [[öl]]
+*Hebrew: [[בירה]] ''f''
+*Hungarian: [[sör]]
+*Icelandic: [[bjór]], [[öl]]
 *[[Ilongo]]: [[serbisa]]
-*[[Indonesian]]: [[bir]]
+*Indonesian: [[bir]]
 *[[Interlingua]]: [[bira]]
-*[[Irish]] Gaelic: [[beoir]]
-*[[Italian]]: [[birra]]
-*[[Japanese]]: [[麦酒]] / [[ビール]] (bīru), [[ビア]] (bia)
-*[[Korean]]: [[맥주]] (maekju)
-*[[Latin]]: [[cervisia]], [[cerevisia]]
-*[[Latvian]]: [[alus]]
-*[[Lithuanian]]: [[alus]]
-*[[Malay]]: [[bir]]
+*Irish Gaelic: [[beoir]]
+*Italian: [[birra]]
+*Japanese: [[麦酒]] / [[ビール]] (bīru), [[ビア]] (bia)
+*Korean: [[맥주]] (maekju)
+*Latin: [[cervisia]], [[cerevisia]]
+*Latvian: [[alus]]
+*Lithuanian: [[alus]]
+*Malay: [[bir]]
 *[[Maori]]: [[pia]]
-*[[Mongolian]]: [[шар айраг]], [[пиво]]
-*[[Norwegian]]: [[øl]]
+*Mongolian: [[шар айраг]], [[пиво]]
+*Norwegian: [[øl]]
 *[[Occitan]]: [[bièra]] ''f'', [[cervesa]] ''f'' 
-*[[Persian]]: [[آبجو]] (Abejo)
-*[[Polish]]: [[piwo]] ''n''
-*[[Portuguese]]: [[cerveja]]
-*[[Romanian]]: [[bere]]
+*[[Persian]]: [[ابجو|آبجو]] (Abejo)
+*Polish: [[piwo]] ''n''
+*Portuguese: [[cerveja]]
+*Romanian: [[bere]]
 *[[Romanica]]: [[bira]] ''f''
-*[[Russian]]: [[пиво]]
-*[[Slovak]]: [[pivo]]
-*[[Slovene]]: [[pivo]] ''n'', [[ol]] ''m'' (archaic)
-*[[Spanish]]: [[cerveza]] ''f''
+*Russian: [[пиво]]
+*Slovak: [[pivo]]
+*Slovene: [[pivo]] ''n'', [[ol]] ''m'' (archaic)
+*Spanish: [[cerveza]] ''f''
 *[[Swahili]]: [[bia]], [[boza]]
-*[[Swedish]]: [[öl]]
-*[[Tamil]]: [[tOppi ]]
+*Swedish: [[öl]]
+*Tagalog: [[serbesa]]
+*[[Tamil]]: (tOppi)
 *[[Tok Pisin]]: [[bia]]
-*[[Turkish]]: [[bira]]
-*[[Ukranian]]: [[пиво]] (pyvo)
+*Turkish: [[bira]]
+*Ukranian: [[пиво]] (pyvo)
 *[[Urdu]]: [[sharaab]]
-*[[Vietnamese]]: [[r­îu bia]]
+*Vietnamese: [[r­îu bia]]
 *[[Volapük]]: [[bir]], [[bil]]
 *[[Welsh]]: [[bîr]], [[cwrw]], [[tablen]]
 *[[Wolof]]: [[sangara]]
 *[[Xhosa]]: [[ubhiya]]
-*[[Yiddish]]: [[bir]]
+*[[Yiddish]]: (bir)
 *[[Zulu]]: [[utshwala]]
+
+=== See also ===
+:[[w:Beer|Wikipedia article on beer]]
 
 ----
 
 ==Dutch==
-#'''beer''' ''m''
-#:plural: '''beren''', female: '''berin''', plural female: '''berinnen'''
-
 ===Pronunciation===
-*[[w:SAMPA|SAMPA]]: /'/
 *[[w:IPA|IPA]]: /'be:r/
 
 ===Noun===
+#'''beer''' ''m''
+#:plural: '''beren''', female: '''berin''', plural female: '''berinnen'''
 
 # Mammal omnivorous animal that can also walk upright.
 # Male of a pig
 # Excrement gathered in a pit to fertilize
 
 ====Translations====
-*[[English]]: [[bear]] (1), [[boar]] (2), [[dam]], [[buttress]], [[debt]]
+*English: [[bear]] (1), [[boar]] (2), [[dam]], [[buttress]], [[debt]]
