--- a/wiki/dadgum.wikitext
+++ b/wiki/dadgum.wikitext
@@ -6,7 +6,7 @@
 # Euphemism for [[goddamned]].
 
 ===Interjection===
-'''dadgum'' or '''dadgummit''', less commonly '''dadgumit'''
+'''dadgum''' or '''dadgummit''', less commonly '''dadgumit'''
 
 # Euphemism for [[goddamned]].
 
