--- a/wiki/dadgum.wikitext
+++ b/wiki/dadgum.wikitext
@@ -8,7 +8,7 @@
 ===Interjection===
 '''dadgum''' or '''dadgummit''', less commonly '''dadgumit'''
 
-# Euphemism for [[goddamned]].
+# Euphemism for [[goddamn]].
 
 ===See Also===
 *[[damn dang darn durn|damn]]
