--- a/wiki/dadgum.wikitext
+++ b/wiki/dadgum.wikitext
@@ -3,12 +3,12 @@
 ===Adjective===
 '''dadgum'''
 
-# Euphemism for [[goddamned]].
+# Euphemism for [[damn dang darn durn|goddamned]].
 
 ===Interjection===
 '''dadgum''' or '''dadgummit''', less commonly '''dadgumit'''
 
-# Euphemism for [[goddamn]].
+# Euphemism for [[damn dang darn durn|goddamn]].
 
 ===See Also===
 *[[damn dang darn durn|damn]]
