--- a/wiki/dang.wikitext
+++ b/wiki/dang.wikitext
@@ -1,1 +1,5 @@
-#REDIRECT [[damn dang darn durn]]
+==English==
+===Adjective===
+'''dang''' (''no [[comparative]] or [[superlative]]'')
+
+#(''[[euphemistic]]'') [[Damn]], [[damned]].
