--- a/wiki/%E5%85%89.wikitext
+++ b/wiki/%E5%85%89.wikitext
@@ -19,7 +19,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -30,6 +30,108 @@
 ***'''[[Jyutping]]''':
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': gwong1
+
+===Compounds===
+*[[光板儿]]
+*[[光笔]]
+*[[光标]]
+*[[光波]]
+*[[光彩]]
+*[[光灿灿]], [[光灿灿的]]
+*[[光程]]
+*[[光赤]]
+*[[光宠]]
+*[[光存储器]]
+*[[光打雷，不下雨]]
+*[[光打印机]]
+*[[光大]]
+*[[光带]]
+*[[光刀]]
+*[[光导管]]
+*[[光导纤维]]
+*[[光电池]]
+*[[光电管]]
+*[[光电效应]]
+*[[光电子]]
+*[[光度]]
+*[[光度计]]
+*[[光风霁月]]
+*[[光辐射]]
+*[[光复]]
+*[[光杆儿]]
+*[[光顾]]
+*[[光怪陆离]]
+*[[光棍]]
+*[[光棍儿]]
+*[[光合作用]]
+*[[光华]]
+*[[光滑]]
+*[[光化学]]
+*[[光化学烟雾]]
+*[[光化作用]]
+*[[光环]]
+*[[光辉]]
+*[[光火]]
+*[[光脚]], [[光脚儿]]
+*[[光洁]]
+*[[光洁度]]
+*[[光解作用]]
+*[[光景]]
+*[[光缆]]
+*[[光亮]]
+*[[光量子]]
+*[[光疗]]
+*[[光临]]
+*[[光溜]]
+*[[光溜溜]], [[光溜溜的]]
+*[[光流]]
+*[[光芒]]
+*[[光面]], [[光面儿]]
+*[[光敏电阻]]
+*[[光明]]
+*[[光明磊落]]
+*[[光明正大]]
+*[[光能]]
+*[[光年]]
+*[[光盘]]
+*[[光票]]
+*[[光谱]]
+*[[光谱仪]]
+*[[光气]]
+*[[光前裕后]]
+*[[光球]]
+*[[光驱]]
+*[[光圈]]
+*[[光荣]]
+*[[光荣榜]]
+*[[光润]]
+*[[光闪闪]], [[光闪闪的]]
+*[[光疏媒质]]
+*[[光束]]
+*[[光速]]
+*[[光趟]]
+*[[光天化日]]
+*[[光通量]]
+*[[光头]]
+*[[光秃秃]], [[光秃秃的]]
+*[[光纤]]
+*[[光鲜]]
+*[[光线]]
+*[[光学]]
+*[[光学纤维]]
+*[[光压]]
+*[[光焰]]
+*[[光洋]]
+*[[光耀]]
+*[[光阴]]
+*[[光源]]
+*[[光泽]]
+*[[光照]]
+*[[光照度]]
+*[[光周期]]
+*[[光柱]]
+*[[光子]]
+*[[光宗耀祖]]
 
 * '''Other info''': 
 
