/* Translations */ +fi <black currant#54927>

--- a/wiki/black_currant.wikitext
+++ b/wiki/black_currant.wikitext
@@ -13,6 +13,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*{{fi}}: [[mustaherukka]], [[mustaviinimarja]] (''colloquial'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -27,6 +28,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*{{fi}}: [[mustaherukka]], [[mustaviinimarja]] (''colloquial'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
