/* Translations */ +fi <blackberry#54915>

--- a/wiki/blackberry.wikitext
+++ b/wiki/blackberry.wikitext
@@ -16,6 +16,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*{{fi}}: [[karhunvatukka]]
 *French: [[mûrier]] ''m''
 *German: [[Brombeere]] ''f''
 *Greek: [[μουριά]] ''f''
@@ -35,6 +36,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Dutch: [[braambes]] ''de''
+*{{fi}}: [[karhunvatukka]]
 *French: [[mûre]] ''f''
 *German: [[Brombeere]] ''f''
 |}
