--- a/wiki/%E6%B8%85.wikitext
+++ b/wiki/%E6%B8%85.wikitext
@@ -30,6 +30,149 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ching1
 
+===Compounds===
+*[[清白]]
+*[[清碧]]
+*[[清仓]]
+*[[清册]]
+*[[清茶]]
+*[[清查]]
+*[[清产核资]]
+*[[清偿]]
+*[[清场]]
+*[[清唱]]
+*[[清炒]]
+*[[清澈]], [[清彻]]
+*[[清晨]]
+*[[清澄]]
+*[[清除]]
+*[[清楚]]
+*[[清醇]]
+*[[清脆]]
+*[[清单]]
+*[[清淡]]
+*[[清党]]
+*[[清道]]
+*[[清道夫]]
+*[[清点]]
+*[[清炖]]
+*[[清芬]]
+*[[清风]]
+*[[清风两袖]]
+*[[清福]]
+*[[清高]]
+*[[清稿]]
+*[[清歌]]
+*[[清官]]
+*[[清光]]
+*[[清规]]
+*[[清规戒律]]
+*[[清贵]]
+*[[清寒]]
+*[[清和]]
+*[[清还]]
+*[[清灰冷灶]]
+*[[清辉]], [[清晖]]
+*[[清火]]
+*[[清寂]]
+*[[清减]]
+*[[清检]]
+*[[清健]]
+*[[清剿]]
+*[[清缴]]
+*[[清教徒]]
+*[[清洁]]
+*[[清洁工]]
+*[[清结]]
+*[[清劲风]]
+*[[清净]]
+*[[清静]]
+*[[清君侧]]
+*[[清俊]]
+*[[清峻]]
+*[[清口]]
+*[[清苦]]
+*[[清库]]
+*[[清朗]]
+*[[清冷]]
+*[[清理]]
+*[[清丽]]
+*[[清廉]]
+*[[清凉]]
+*[[清凉油]]
+*[[清亮]]
+*[[清冽]]
+*[[清流]]
+*[[清美]]
+*[[清名]]
+*[[清明]]
+*[[清喷漆]]
+*[[清贫]]
+*[[清平]]
+*[[清漆]]
+*[[清奇]]
+*[[清绮]]
+*[[清气]]
+*[[清讫]]
+*[[清浅]]
+*[[清欠]]
+*[[清秋]]
+*[[清癯]]
+*[[清曲]]
+*[[清趣]]
+*[[清泉]]
+*[[清热]]
+*[[清润]]
+*[[清扫]]
+*[[清瘦]]
+*[[清爽]]
+*[[清水墙]]
+*[[清水衙门]]
+*[[清算]]
+*[[清谈]]
+*[[清汤]]
+*[[清汤寡水]], [[清汤寡水儿]]
+*[[清甜]]
+*[[清通]]
+*[[清退]]
+*[[清婉]]
+*[[清晰]]
+*[[清晰度]]
+*[[清洗]]
+*[[清鲜]]
+*[[清闲]]
+*[[清香]]
+*[[清晓]]
+*[[清心]]
+*[[清新]]
+*[[清馨]]
+*[[清醒]]
+*[[清兴]]
+*[[清秀]]
+*[[清雅]]
+*[[清扬]]
+*[[清样]]
+*[[清恙]]
+*[[清野]]
+*[[清夜]]
+*[[清一色]]
+*[[清议]]
+*[[轻逸]]
+*[[清音]]
+*[[清莹]]
+*[[清幽]]
+*[[清油]]
+*[[清游]]
+*[[清越]]
+*[[清早]]
+*[[清湛]]
+*[[清账]]
+*[[清真]]
+*[[清真教]]
+*[[清真寺]]
+*[[清蒸]]
+*[[清正]]
+
 * '''Other info''': 
 
 ----
