--- a/wiki/%E6%99%B4.wikitext
+++ b/wiki/%E6%99%B4.wikitext
@@ -16,7 +16,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -27,6 +27,21 @@
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': ching4
+
+===Compounds===
+*[[晴霭]]
+*[[晴好]]
+*[[晴和]]
+*[[晴空]]
+*[[晴朗]]
+*[[晴丽]]
+*[[晴美]]
+*[[晴明]]
+*[[晴爽]]
+*[[晴天]]
+*[[晴天霹雳]]
+*[[晴雨表]]
+*[[晴雨伞]]
 
 * '''Other info''': 
 
