--- a/wiki/%E9%B8%A3.wikitext
+++ b/wiki/%E9%B8%A3.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#cry of bird or animal
-*# make sound
+*# [[cry]] of bird or animal
+*# make [[sound]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,6 +33,22 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[鳴]]
+
+===Compounds===
+*[[鸣鞭]]
+*[[鸣不平]]
+*[[鸣唱]]
+*[[鸣笛]]
+*[[鸣放]]
+*[[鸣鼓而攻之]]
+*[[鸣叫]]
+*[[鸣金]]
+*[[鸣锣开道]]
+*[[鸣响]]
+*[[鸣谢]]
+*[[鸣冤]]
+*[[鸣噪]]
+*[[鸣奏]]
 
 * '''Other info''': 
 
