/* Translations */ +fr <black currant#54927>

--- a/wiki/black_currant.wikitext
+++ b/wiki/black_currant.wikitext
@@ -29,6 +29,7 @@
 {|
 <!--languages from A to I go here-->
 *{{fi}}: [[mustaherukka]], [[mustaviinimarja]] (''colloquial'')
+*{{fr}}: [[cassis]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
