+mobisode <current events#129>

--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -29,8 +29,9 @@ This page is to list any interesting new words, abbreviations, etc, that are ent
 *[[gib]] (''computer gaming sense'') 	
  	
 ==M== 	
-*[[metrosexual]] 	
- 	
+*[[metrosexual]]
+*[[mobisode]]
+
 ==P== 	
 *[[pap]] (''verb sense'') 	
 *[[petrolhead]] 	
