--- a/wiki/sodalite.wikitext
+++ b/wiki/sodalite.wikitext
@@ -15,19 +15,8 @@
 === Chemical composition ===
 *Sodium aluminum silicate with chlorine, <math>Na_4Al_3Si_3O_{12}Cl</math>
  
-=== Physical properties ===
-
-*Moh's Hardness: 5.5-6.0
-*Specific gravity: 2.2-2.3
-*Color: White, blue, violet, pink, colorless
-*Luster: Glassy, transparent to translucent
-*Fracture: Conchoidal to uneven
-*Cleavage: Poor dodecahedral
-*Habit: Cubic-hexoctahedral
-
-===Special test===
-
-:Frequently fluorescent yellow to orange in long-wave ultraviolet
+===More information===
+:[http://en.wikipedia.org/wiki/Sodalite Wikipedia article on Sodalite]
 
 ===''See also:''===
 
