--- a/wiki/lazurite.wikitext
+++ b/wiki/lazurite.wikitext
@@ -15,15 +15,9 @@
 === Chemical composition ===
 *Sodium aluminum silicate with sulphur, <math>Na_{4-5}Al_3Si_3O_{12}S</math>
  
-=== Physical properties ===
+===More information===
 
-*Moh's Hardness: 5.0-5.5
-*Specific gravity: 2.4-2.5
-*Color: Blue, violet-blue, greenish-blue
-*Luster: Glassy, translucent
-*Fracture: Uneven
-*Cleavage: Poor dodecahedral
-*Habit: Cubic-hexoctahedral
+:[http://en.wikipedia.org/wiki/Lazurite Wikipedia article on Lazurite and Lapis Lazuli]
 
 ===''See also:''===
 
