--- a/wiki/tridymite.wikitext
+++ b/wiki/tridymite.wikitext
@@ -14,15 +14,9 @@
 === Chemical composition ===
 *Silicon dioxide, <math>SiO_2</math>
  
-=== Physical properties ===
+=== More information ===
 
-*Moh's Hardness: 7.0
-*Specific gravity: 2.3
-*Color: Colorless, white
-*Luster: Glassy, transparent to translucent
-*Fracture: Conchoidal
-*Cleavage: Prismatic
-*Habit: Orthorhombic - Rhombic bipyramidal (Crystals look tabular)
+:[http://en.wikipedia.org/wiki/Tridymite Wikipedia article on Silicon dioxide minerals]
 
 ===Related words===
 :''See'' [[Silicate]], [[Silica group]]
