--- a/wiki/cristobalite.wikitext
+++ b/wiki/cristobalite.wikitext
@@ -14,19 +14,9 @@ Named for the type locality at Cerro San Cristóbal, Mexico.
 === Chemical composition ===
 *Silicon dioxide, <math>SiO_2</math>
  
-=== Physical properties ===
+=== More information ===
 
-*Moh's Hardness: 5.0-7.0
-*Specific gravity: 2.3
-*Color: White
-*Luster: Glassy, translucent, often fluorescent
-*Fracture: None (shatters)
-*Cleavage: None
-*Habit: Tetragonal trapezohedral (pseudo-isometric)
-
-===Special test===
-
-If Cristobalite is heated to 350º F., the milky appearance disappears and reappears on cooling.
+:[http://en.wikipedia.org/wiki/Tridymite Wikipedia article on Silicon dioxide minerals]
 
 ===Related words===
 :''See'' [[Silicate]], [[Silica group]]
