--- a/wiki/essiac.wikitext
+++ b/wiki/essiac.wikitext
@@ -1,3 +1,5 @@
-{{rfd}}
+==English==
+===Noun phrase===
+'''essiac tea''' (''[[uncountable]]'')
 
-essiac tea
+#A [[herbal]] [[infusion]] reputed by some to be able to cure [[cancer]].
