--- a/wiki/quartz.wikitext
+++ b/wiki/quartz.wikitext
@@ -1,4 +1,4 @@
-[[Image:Pfamethyst.jpg|frame|Quartz, variety Amethyst. Photo US Geological Survey]]
+[[Image:Pfamethyst.jpg|thumbnail|Quartz, variety Amethyst. Photo US Geological Survey]]
 ===Pronunciation===
 
 :kwarts
@@ -9,15 +9,9 @@
 === Chemical composition ===
 *Silicon dioxide, <math>SiO_2</math>
  
-=== Physical properties ===
+=== More information===
 
-*Moh's Hardness: 7.0
-*Specific gravity: 2.6
-*Color: Colorless, white, smoky, rose, violet, brown, or almost any color depending on inclusions and impurities
-*Luster: glassy, transparent to subtranslucent
-*Fracture: conchoidal
-*Cleavage: Rhombohedral, but seldom observable
-*Habit: Hexagonal - Trigonal trapezohedral
+:[http://en.wikipedia.org/wiki/Quartz Wikipedia article on quartz]
 
 ===Related words===
 :''See'' [[Rock]], [[Granite]], [[Pegmatite]]
