fmt; trimmed def <nitty-gritty#64904>

--- a/wiki/nitty-gritty.wikitext
+++ b/wiki/nitty-gritty.wikitext
@@ -1,3 +1,5 @@
-'''Noun''' '''- (slang)'''
+==English==
+===Noun===
+'''nitty-gritty''' (''[[uncountable]]'')
 
-The essence or core of something. The primary or salient elements of an issue.
+#(''colloquial'') The essence or core of something.
