+usage note <right-angled triangle#47801>

--- a/wiki/right-angled_triangle.wikitext
+++ b/wiki/right-angled_triangle.wikitext
@@ -1,6 +1,8 @@
 ==English==
-
 ===Noun===
-'''right-angled triangle'''
+'''right-angled triangle''' (''plural'' '''right-angled triangles''')
 
-# Less common synonym of [[right triangle]].
+#Same as [[right triangle]].
+
+====Usage note====
+'''Right-angled triangle''' is probably the more common term in the UK, while '''right triangle''' is probably the more common term in the US.
