--- a/wiki/intermodal.wikitext
+++ b/wiki/intermodal.wikitext
@@ -4,7 +4,7 @@
 
 #Relating to more than one mode of transport. 
 #:For example, a station which provides transfers between buses and trains could be described as '''intermodal'''.  
-#:When discussing frieght, '''intermodal''' usually refers to land/sea containers.
+#:When discussing freight, '''intermodal''' usually refers to land/sea containers.
 
 ====Translations====
 *French: [[Intermodalité]]
