+syn, plural & usage note <right triangle#47784>

--- a/wiki/right_triangle.wikitext
+++ b/wiki/right_triangle.wikitext
@@ -1,5 +1,12 @@
 ==English==
+===Noun phrase===
+'''right triangle''' (''plural'' '''right triangles''')
 
-===Noun Phrase===
+#A [[triangle]] having a [[right angle]] as one of its interior angles.
 
-# A [[triangle]] having a [[right angle]] as one of its interior angles.
+====Synonyms====
+*[[right-angled triangle]] (''see usage note below'')
+
+====Usage note====
+'''Right triangle''' is probably the more common term in the US, while 
+'''right-angled triangle''' is probably the more common term in the UK,
