/* Noun */ <right-angled triangle#47801>

--- a/wiki/right-angled_triangle.wikitext
+++ b/wiki/right-angled_triangle.wikitext
@@ -1,5 +1,6 @@
 ==English==
-===Noun===
+==English==
+===Noun phrase===
 '''right-angled triangle''' (''plural'' '''right-angled triangles''')
 
 #Same as [[right triangle]].
