--- a/wiki/motorcycle.wikitext
+++ b/wiki/motorcycle.wikitext
@@ -14,5 +14,6 @@
 *Finnish: [[moottoripyörä]]
 *{{msg:de}}: [[Motorrad]] ''n''
 *Japanese: [[オートバイ]], [[バイク]]
+*Lithuanian: [[motociklas]] ''m''
 *Slovak: [[motorka#Slovak|motorka]] ''f'', [[motocykel#Slovak|motocykel]] ''m''
 *Swedish: [[motorcykel]] ''c''
