--- a/wiki/truck.wikitext
+++ b/wiki/truck.wikitext
@@ -28,6 +28,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *Italian: [[autocarro]] ''m'', [[camion]] ''m''
+*Lithuanian: [[sunkvežimis]] ''m''
 *Spanish: [[camión]], [[camioneta]]
 *Swedish: [[lastbil]]
 |}
