--- a/wiki/tricycle.wikitext
+++ b/wiki/tricycle.wikitext
@@ -31,6 +31,7 @@
 *Italian: [[triciclo]] ''m'', [[tricicletto]] (Not sure if this is correct - my dictionary has "triciclo".  Could someone verify this please.)
 *Japanese: [[三輪車]] (さんりんしゃ)
 *Latin: [[tricyclus]], [[triicyclettus]]
+*Lithuanian: [[triratis]] ''m'', [[triratukas]] (if small) ''m''
 *Norwegian: [[trehjulssykkel]]
 *Slovak: [[trojkolka]] ''f''
 *Tagalog: [[traysikel]] ''f''
