--- a/wiki/variable.wikitext
+++ b/wiki/variable.wikitext
@@ -30,6 +30,7 @@
 *Italian: [[variabile]] ''f''
 *Japan: [[変数]]
 *Korean: [[가변]]
+*Lithuanian: [[kintamasis]] ''m''
 *Portuguese: [[variável]] ''f''
 *[[Slovak]]: [[premenná]] ''f''
 *Spanish: variable ''f''
