--- a/wiki/%E5%B1%82.wikitext
+++ b/wiki/%E5%B1%82.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': storey, layer, floor, stratum
+* '''Common Meaning''': [[storey]], [[layer]], [[floor]], [[stratum]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,23 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[層]]
+
+===Compounds===
+*[[层报]]
+*[[层层]]
+*[[层出不穷]]
+*[[层次]]
+*[[层次分明]]
+*[[层叠]]
+*[[层见叠出]]
+*[[层浪]]
+*[[层理]]
+*[[层林]]
+*[[层流]]
+*[[层峦]]
+*[[层面]]
+*[[层压]]
+*[[层云]]
 
 * '''Other info''': 
 
