--- a/wiki/diocese.wikitext
+++ b/wiki/diocese.wikitext
@@ -11,6 +11,7 @@ From Greek
 *[[Finnish]]: [[hiippakunta]]
 *Italian: [[diocesi]] ''f''
 *Japanese: [[教区]] (きょうく, kyouku)
+*Lithuanian: [[vyskupija]] ''f''
 *{{sk}}: [[diecéza]] ''f''
 
 ===Related Terms===
